# iotctl_embedded

./: CMakeLists.txt  prj.conf
boards/: stm32f4_disco.overlay
include/: config.h  mqtt_publisher.h  wifi_handling.h
src/: config.h  main.c  mqtt_publisher.c  wifi_handling.c  wifi_handling.h
